name: reflex-yesod-websockets-frontend
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
description: Front end for reflex-yesod-websockets
author: Divam Narula <dfordivam@gmail.com>
extra-source-files:
  README.md
  src/style.css

source-repository head
  type:     git
  location: https://github.com/dfordivam/reflex-yesod-websockets

library
  hs-source-dirs:      src
  exposed-modules:
      Lib

  other-modules:

  build-depends:
      base
    , text
    , ghcjs-dom
    , reflex
    , reflex-dom
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

  if impl(ghcjs)
    build-depends: ghcjs-base

executable reflex-yesod-websockets-frontend
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
  build-depends:
      base
    , reflex-yesod-websockets-frontend -any
  default-language:    Haskell2010
